layout bugs upd

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -648,8 +648,8 @@ form#editform {
 .research-group-card {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
-  cursor: pointer;
+  //align-items: flex-end;
+  //cursor: pointer;
   margin: 0 1rem 1rem 0;
   overflow: hidden;
   color: @text-color;
@@ -675,7 +675,7 @@ form#editform {
 
   a {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     padding: 1rem;
     width: 100%;
 
