--- a/resources/variables.less
+++ b/resources/variables.less
@@ -186,7 +186,7 @@
 @sidebar-shadow: .5em .5em 2.5em hsla(0,0,0,80%);
 @sidebar-width: 244px;
 @dark-bg-letter-spacing: .075ex;
-@base-transition: all .25s ease-out;
+@base-transition: color .25s ease-out, opacity .25s ease-out;
 
 // To hide objects, but keep them accessible for screen-readers
 .hidden() {
